<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.views.activities.user_details.UserDetailActivity">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp"/>
        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="none"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/llDashboard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tvFollowers"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:paddingTop="4dp"
                        android:paddingBottom="2dp"
                        android:textColor="@color/colorBlack"
                        android:text="@string/followers"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tvFollowing"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:paddingTop="4dp"
                        android:paddingBottom="2dp"
                        android:textColor="@color/colorBlack"
                        android:text="@string/following"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <FrameLayout
                    android:id="@+id/flNotes"
                    android:visibility="gone"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_rectangle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="90dp">
                    <TextView
                        android:id="@+id/tvNotes"
                        android:textSize="16sp"
                        android:paddingTop="4dp"
                        android:paddingBottom="2dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:lines="4"
                        android:ellipsize="end"
                        android:textColor="@color/colorBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </FrameLayout>
                <LinearLayout
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:textSize="16sp"
                        android:paddingTop="4dp"
                        android:paddingBottom="2dp"
                        android:textColor="@color/colorBlack"
                        android:text="@string/notes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <FrameLayout
                        android:background="@drawable/bg_rectangle"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:focusableInTouchMode="true">
                        <EditText
                            android:id="@+id/etNotes"
                            android:textSize="16sp"
                            android:paddingTop="4dp"
                            android:paddingBottom="2dp"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:gravity="start"
                            android:hint="@string/write_here"
                            android:textColor="@color/colorBlack"
                            android:background="@null"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text"
                            android:autofillHints="@string/write_here" />
                    </FrameLayout>
                </LinearLayout>
                <Button
                    android:id="@+id/btnSave"
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/save"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>